# Algorithms_2021

./: .gitignore  2.1.1 year.cpp  2.1.2 chess.cpp  2.1.3 chess.cpp  2.1.4 chess.cpp  2.1.5 chess.cpp  2.2.cpp  2.4.cpp  4.1.1.cpp  4.1.2.cpp  4.1.3.cpp  4.1.4.cpp  4.1.5.cpp  4.2.1.cpp  4.2.2.cpp  4.2.3.cpp  4.2.4.cpp  4.2.5.cpp  ALGORITMS.sln  Algorithms_2021.sln  Algorithms_2021.vcxproj  Algorithms_2021.vcxproj.filters  CMakeLists.txt  ind_1_var_5.cpp  ind_2_var_5.cpp  ind_6_var_5.cpp  lab3.1.cpp  lab3.2.cpp  lab3.3.cpp
2lab2sem/: Dictionary.cpp  Dictionary.h  lb2.cpp  qwe
3lab2sem/: 3.cpp  Exception.h  Stack.h  StackArray.h
4lab2sem/: 4.cpp  BinarySearchTree.h
5lab2sem/: 5l.cpp  BinarySearchTree.h  CircleQueue.h  Dictionary.h  Queue.h  QueueOverflow.h  QueueUnderflow.h  QueueWrongSize.h
Help/: DoubleList.cpp  DoubleList.h  main.cpp  templates.cpp
Ind_1/: CMakeLists.txt  Perov_Ivan_Indvl_1.cpp
Individual/: main.cpp
Indvl_1/: Perov_Ivan_Indvl_1.cpp
LAB1/: LAB1.cpp  LAB1.vcxproj  LAB1.vcxproj.filters
LAB2/: LAB2.cpp  LAB2.vcxproj  LAB2.vcxproj.filters
LAB3/: LAB3-2.cpp  LAB3-3.cpp  LAB3.APS  LAB3.cpp  LAB3.vcxproj  LAB3.vcxproj.filters  input.txt  resource.h
LAB4/: LAB4.cpp  LAB4.vcxproj  LAB4.vcxproj.filters  input.txt
LAB5/: LAB5.cpp  LAB5.vcxproj  LAB5.vcxproj.filters  input.txt
LAB5-2/: LAB5-2.cpp  LAB5-2.vcxproj  LAB5-2.vcxproj.filters
LAB6/: ArrayManager.h  LAB6.cpp  LAB6.vcxproj  LAB6.vcxproj.filters  Person.cpp  Person.h  PersonManager.cpp  PersonManager.h  String.cpp  String.h  input.txt  output.txt
LAB7/: LAB7.cpp  LAB7.vcxproj  LAB7.vcxproj.filters  input.txt  output.txt
OOP/: ArrayFile.cpp  ArrayFile.h  MainFile.cpp  Sub.cpp  Sub.h  file5.txt
_docs/: ind1.docx  ind2.docx  ind3.docx  ind4.docx  ind5.docx  ind6.docx  ind7.docx
classes/: CMakeLists.txt  main.cpp
ind1/: CMakeLists.txt  Ind.cpp  Task1.cpp  ind.cpp  ind1.cpp  ind1_2.cpp  opt1.cpp  z1.1.cpp
ind2/: 1.2.cpp  CMakeLists.txt  Task1.cpp  ind2.cpp  main.cpp  opt1.cpp  opt2.cpp  z1.1.cpp
ind3/: 3.1.cpp  3.2.cpp  3.3.cpp  CMakeLists.txt  Igor.txt  Task.cpp  array.txt  counter.h  file.txt  input  input.txt  main.cpp  myText.txt  opt3.1.cpp  opt3.2.cpp  opt3.3.cpp  z1.1.cpp  z1.2.cpp  z1.3.cpp  z1.cpp  z2.cpp  z3.cpp
ind4/: 1.2.cpp  CMakeLists.txt  Task.cpp  file.txt  file2.txt  fileIn.txt  fileOut.txt  ind4.cpp  input  input.txt  main.cpp  myText.txt  opt1.cpp  text.txt  z1.1.cpp  z1.cpp
ind5/: 1.2.cpp  2.2.cpp  CMakeLists.txt  FileOut.txt  Task_Const.cpp  Task_Dynamic.cpp  data2  file5_1.txt  function.cpp  (+17 more)
lab2/: 1.1.cpp  1.2.cpp  1.3.cpp  1.4.cpp  1.5.cpp  2.1.2 chess.cpp  2.1.3 chess.cpp  2.1.4 chess.cpp  2.1.5 chess.cpp  2.1.cpp  2.2.cpp  2.3.cpp  2.4.cpp  2.5.cpp  CMakeLists.txt  LAB2_FULL.cpp  Lab2FULL.cpp  SinglyOrderedList.cpp  SinglyOrderedList.h  Task1_1.cpp  Task1_2.cpp  Task1_3.cpp  Task1_4.cpp  Task1_5.cpp  Task2_1.cpp  Task2_2.cpp  Task2_3.cpp  Task2_4.cpp  Task2_5.cpp  chess.cpp  lab1.1.cpp  lab1.2.cpp  lab1.3.cpp  lab1.4.cpp  lab1.5.cpp  lab2.1.cpp  lab2.10.cpp  lab2.2.cpp  lab2.3.cpp  lab2.4.cpp  (+34 more)
lab2/lab2/: CMakeLists.txt  main.cpp
semester2/AADS/pr5_Queue/Queue/: BinarySearchTree.h  CMakeLists.txt  CircleQueue.cpp  CircleQueue.h  Queue.cpp  Queue.h  QueueOverflow.h  QueueUnderflow.h  QueueWrongSize.h  main.cpp
(+444 files in other folders)
