cmake_minimum_required(VERSION 3.17)
project(algorithms_2021)

set(CMAKE_CXX_STANDARD 23)

add_executable(task1.1 lab1/task1.1.cpp)
add_executable(task1.2 lab1/task1.2.cpp)
add_executable(task1.3 lab1/task1.3.cpp)

add_executable(task2.1 lab2/task2.1.cpp)
add_executable(task2.2.1 lab2/task2.2.1.cpp)
add_executable(task2.2.2 lab2/task2.2.2.cpp)
add_executable(task2.2.3 lab2/task2.2.3.cpp)
add_executable(task2.2.4 lab2/task2.2.4.cpp)
add_executable(task2.2.5 lab2/task2.2.5.cpp)


add_executable(task3.1 lab3/task3.1.cpp)
add_executable(task3.2 lab3/task3.2.cpp)
add_executable(task3.3 lab3/task3.3.cpp)

add_executable(task4.1 lab4/task4.1.cpp)
add_executable(task4.2.1 lab4/task4.2.1.cpp)
add_executable(task4.2.2 lab4/task4.2.2.cpp)
add_executable(task4.2.3 lab4/task4.2.3.cpp)
add_executable(task4.2.4 lab4/task4.2.4.cpp)
add_executable(task4.2.5 lab4/task4.2.5.cpp)

add_executable(personal_task1.11 personal_labs/lab1/task1.11.cpp)

add_executable(personal_task2.11 personal_labs/lab2/task2.11.cpp)

add_executable(personal_task3.11 personal_labs/lab3/task3.11.cpp)

add_executable(personal_task4.11 personal_labs/lab4/task4.11.cpp)

add_executable(personal_task5.11 personal_labs/lab5/task5.11.cpp)

add_executable(practical_task1.11 practical_labs/lab1/task1.11.cpp)
add_executable(OOP_task1 practical_labs/OOP_lab1/tasks.cpp)