cmake_minimum_required(VERSION 3.17)
project(algorithms_2021)

set(CMAKE_CXX_STANDARD 20)


add_executable(algorithms_2021 2.5.cpp)
add_executable(1.1 1.1.cpp)
add_executable(1.2 1.2.cpp)
add_executable(1.3 1.3.cpp)
add_executable(1.4 1.4.cpp)
add_executable(1.5 1.5.cpp)
add_executable(2.1 2.1.cpp)
add_executable(2.2 2.2.cpp)
add_executable(2.3 2.3.cpp)
add_executable(2.4 2.4.cpp)